# remind-me

./: .gitignore  README.md  docker-compose.yml  text.txt
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  state.py
backend/app/api/routes/: agent.py  health.py  history.py  memory.py  objects.py  people.py  recognition.py  settings.py  tasks.py  voice.py
backend/app/core/: database.py  vector_store.py
backend/app/models/: __init__.py  tables.py
backend/app/repositories/: object_repo.py  person_repo.py  settings_repo.py
backend/app/schemas/: known_object.py  person.py  recognition.py  settings.py
backend/app/services/: agent_service.py  face_service.py  object_service.py  recognition_service.py  room_service.py  voice_service.py
backend/app/utils/: image.py
backend/data/: .gitignore
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BottomControls.tsx  CameraView.tsx  EnrollObjectModal.tsx  EnrollPersonModal.tsx  FaceOverlay.tsx  HelpRoom.tsx  MemoryPanel.tsx  ObjectOverlay.tsx  QuickEnrollModal.tsx  SettingsPanel.tsx  TopControls.tsx  TranscriptPanel.tsx  UnknownFaceOverlay.tsx  VoiceCommandToast.tsx  VolunteerPanel.tsx
frontend/src/hooks/: useCamera.ts  useRecognition.ts  useVoiceCommand.ts
